Sizable updates to the repository/model setup. These were very old and the mongo-repo dependency changed its behavior recently for other projects. This is aquick update to get this project consitent with what mongo-repo expects. Aded some tests for pricing and payment integration. Changed pricing for Ozaname with their 2015 updates.

--- a/views/sponsor.hbs
+++ b/views/sponsor.hbs
@@ -4,103 +4,92 @@
     <h2>Sponsorship Levels</h2>
     <div id="sponsor">
       <div class="row">
-        <div class="col-sm-12 col-md-4">
-          <h3><a href="/register#sponsor">HOLLYWOOD STAR - $25,000+</a></h3>
+        <div class="col-sm-12 col-md-6">
+          <h3><a href="/register#sponsor">AWARD WINNER - $50,000</a></h3>
           <ul>
-            <li>Three tables for 10 with preferential seating; customized table sign.</li>
-            <li>Included in all publicity, including online promotion.</li>
-            <li>Logo displayed in program. </li>
-            <li>Prominent signage at the Gala. </li>
-            <li>*YOP Tax credits available.</li>
+            <li>Two tables for 12</li>
+            <li>VIP table placement</li>
+            <li>Customized table sign</li>
+            <li>Logo/name included in all publicity</li>
+            <li>Logo/name displayed in event program</li>
+            <li>Logo/name displayed in visual presentaion</li>
+            <li>Logo/name displayed on step and repeat banner</li>
+            <li>Event social media announcements</li>
+            <li>Recognition on website</li>
+            <li>Full-page ad in the event program</li>
+            <li>12 valet tickets</li>
           </ul>
         </div>
-        <div class="col-sm-12 col-md-4">
-          <h3><a href="/register#sponsor">MAJOR STAR- $15,000</a></h3>
+        <div class="col-sm-12 col-md-6">
+          <h3><a href="/register#sponsor">HOLLYWOOD STAR - $25,000</a></h3>
           <ul>
-            <li>Two tables for 10 with preferential seating; customized table sign.</li>
-            <li>Included in all publicity, including online promotion.</li>
-            <li>Logo displayed in program. </li>
-            <li>Prominent signage at the Gala. </li>
-            <li>*YOP Tax credits available.</li>
+            <li>Two tables for 10</li>
+            <li>Premier table placement</li>
+            <li>Customized table sign</li>
+            <li>Logo/name included in all publicity</li>
+            <li>Logo/name displayed in event program</li>
+            <li>Logo/name displayed in visual presentaion</li>
+            <li>Event social media announcements</li>
+            <li>Recognition on website</li>
+            <li>Full-page ad in the event program</li>
+            <li>10 valet tickets</li>
           </ul>
-       </div>
-        <div class="col-sm-12 col-md-4">
+        </div>
+      </div>
+      <div class="row clearfix">
+        <div class="col-sm-12 col-md-6">
           <h3><a href="/register#sponsor">STAR - $10,000</a></h3>
           <ul>
-            <li>Table for 10 with preferential seating; customized table sign.</li>
-            <li>Included in all publicity, including online promotion.</li>
-            <li>Logo displayed in program. </li>
-            <li>Prominent signage at the Gala. </li>
-            <li>*YOP Tax credits available.</li>
+            <li>One table for 10</li>
+            <li>Premier table placement</li>
+            <li>Customized table sign</li>
+            <li>Logo/name displayed in event program</li>
+            <li>Logo/name displayed in visual presentaion</li>
+            <li>Event social media announcements</li>
+            <li>Recognition on website</li>
+            <li>Half-page ad in the event program</li>
+            <li>5 valet tickets</li>
+          </ul>
+        </div>
+        <div class="col-sm-12 col-md-6">
+          <h3><a href="/register#sponsor">CO-STAR - $5,000</a></h3>
+          <ul>
+            <li>One table for 10</li>
+            <li>Preferred table placement</li>
+            <li>Customized table sign</li>
+            <li>Logo/name displayed in event program</li>
+            <li>Logo/name displayed in visual presentaion</li>
+            <li>Recognition on website</li>
+            <li>Quarter-page ad in the event program</li>
+          </ul>
+        </div>
+      </div>
+      <div class="row clearfix">
+        <div class="col-sm-12 col-md-6">
+          <h3><a href="/register#sponsor">PRODUCER - $2,500</a></h3>
+          <ul>
+            <li>One table for 10</li>
+            <li>Logo/name displayed in event program</li>
+            <li>Logo/name displayed in visual presentaion</li>
+            <li>Recognition on website</li>
+          </ul>
+        </div>
+        <div class="col-sm-12 col-md-6">
+          <h3><a href="/register#sponsor">SUPPORTING CAST - $500</a></h3>
+          <ul>
+            <li>Two entrances to the Gala</li>
+            <li>Logo/name displayed in event program</li>
+          </ul>
+        </div>
+        <div class="col-sm-12 col-md-12">
+          <h3><a href="/register#sponsor">EXTRA - $150</a></h3>
+          <ul>
+            <li>Individual ticket</li>
           </ul>
         </div>
       </div>
 
-      <div class="row clearfix">
-        <div class="col-sm-12 col-md-4">
-          <h3><a href="/register#sponsor">CO-STAR - $5,000</a></h3>
-          <ul>
-            <li>Table for 10 with preferential seating; customized table sign.</li>
-            <li>Name displayed in program.</li>
-            <li>Prominent signage at the Gala. </li>
-            <li>*YOP Tax credits available.</li>
-          </ul>
-        </div>
-        <div class="col-sm-12 col-md-4">
-          <h3><a href="/register#sponsor">PRODUCER - $3,000</a></h3>
-          <ul>
-            <li>Table for 10 with customized table sign.</li>
-            <li>Name listed in program.</li>
-            <li>Signage at the Gala. </li>
-            <li>*YOP Tax credits available.</li>
-          </ul>
-       </div>
-        <div class="col-sm-12 col-md-4">
-          <h3><a href="/register#sponsor">TABLE SPONSOR - $2,000</a></h3>
-          <ul>
-            <li>Table for 10.</li>
-            <li>Name listed in program.</li>
-            <li>Signage at the Gala. </li>
-            <li>*YOP Tax credits available.</li>
-          </ul>
-        </div>
-      </div>
-      <div class="row clearfix">
-        <div class="col-sm-12 col-md-4">
-          <h3><a href="/register#sponsor">UNDERWRITER - $1,500</a></h3>
-          <ul>
-            <li>Two entrances to the Gala.</li>
-            <li>Name listed in program.</li>
-            <li>Signage at the Gala. </li>
-            <li>*YOP Tax credits available.</li>
-          </ul>
-        </div>
-        <div class="col-sm-12 col-md-4">
-          <h3><a href="/register#sponsor">SUPPORTING CAST - $750</a></h3>
-          <ul>
-            <li>Four entrances to the Gala.</li>
-            <li>Name listed in program.</li>
-          </ul>
-       </div>
-        <div class="col-sm-12 col-md-4">
-          <h3><a href="/register#sponsor">CORPORATE SPONSOR - $450</a></h3>
-          <ul>
-            <li>Two entrances to the Gala.</li>
-            <li>Name listed in program.</li>
-          </ul>
-        </div>
-      </div>
-      <div class="row clearfix">
-        <div class="col-sm-12 col-md-4">
-          <h3><a href="/register#sponsor">EXTRA - $150</a></h3>
-          <ul>
-            <li>One entrance to the Gala.</li>
-          </ul>
-        </div>
-      </div>
-      <div class="row clearfix">
-        <p><em><small>*Donations eligible for Youth Opportunity (YOP) Tax Credits must be received by June 30, 2015. Please indicate your interest to us so we can provide you with a one-page form to complete in order to claim the credits. They are available on a first-come, first-served basis. <a href="http://ded.mo.gov/BCS%20Programs/BCSProgramDetails.aspx?BCSProgramID=85">Download our informational insert</a> or visit the Missouri government’s website for more details.</small></em></p>
-      </div>
+      <p><em><small>*Donations eligible for Youth Opportunity (YOP) Tax Credits must be received by June 30, 2015. Please indicate your interest to us so we can provide you with a one-page form to complete in order to claim the credits. They are available on a first-come, first-served basis. <a href="http://ded.mo.gov/BCS%20Programs/BCSProgramDetails.aspx?BCSProgramID=85">Download our informational insert</a> or visit the Missouri government’s website for more details.</small></em></p>
     </div>
   </div>
 </div>
