--- a/views/login.hbs
+++ b/views/login.hbs
@@ -2,7 +2,7 @@
   <input type="hidden" name="redirectTo" value="{{redirectTo}}"/>
   <h2 class="form-signin-heading">Please sign in</h2>
   <div class="form-group">
-    <input name="username" type="username" class="form-control" placeholder="Email address" autofocus>
+    <input name="username" type="text" class="form-control" placeholder="Email address" autofocus>
   </div>
   <div class="form-group">
     <input name="password" type="password" class="form-control" placeholder="Password">
