--- a/views/register.hbs
+++ b/views/register.hbs
@@ -51,19 +51,16 @@
           <div class="row container">
             <div class="col-md-6 col-sm-12">
               <ul>
-                <li><label for="level_1"><input type="radio" name="level" id="level_1" value="1"/> Hollywood Star $25,000 + (30 seats)</label></li>
-                <li><label for="level_2"><input type="radio" name="level" id="level_2" value="2"/> Major Star $15,000 (20 seats)</label></li>
+                <li><label for="level_1"><input type="radio" name="level" id="level_1" value="1"/> Award Winner $50,000 (24 seats)</label></li>
+                <li><label for="level_1"><input type="radio" name="level" id="level_2" value="2"/> Hollywood Star $25,000 (20 seats)</label></li>
                 <li><label for="level_3"><input type="radio" name="level" id="level_3" value="3"/> Star $10,000 (10 seats)</label></li>
                 <li><label for="level_4"><input type="radio" name="level" id="level_4" value="4"/> Co-Star $5,000 (10 seats)</label></li>
-                <li><label for="level_5"><input type="radio" name="level" id="level_5" value="5"/> Producer $3,000 (10 seats)</label></li>
               </ul>
             </div>
             <div class="col-md-6 col-sm-12">
               <ul>
-                <li><label for="level_6"><input type="radio" name="level" id="level_6" value="6"/> Table Sponsor $2,000 (10 seats)</label></li>
-                <li><label for="level_7"><input type="radio" name="level" id="level_7" value="7"/> Underwriter $1,500 (2 seats)</label></li>
-                <li><label for="level_8"><input type="radio" name="level" id="level_8" value="8"/> Supporting Cast $750 (4 seats)</label></li>
-                <li><label for="level_9"><input type="radio" name="level" id="level_9" value="9"/> Corporate Sponsor $450 (2 seats)</label></li>
+                <li><label for="level_5"><input type="radio" name="level" id="level_5" value="5"/> Producer $2,500 (10 seats)</label></li>
+                <li><label for="level_8"><input type="radio" name="level" id="level_6" value="6"/> Supporting Cast $500 (2 seats)</label></li>
                 <li><label for="level_10"><input type="radio" name="level" id="level_10" value="10" checked/> Extra Seats Only</label></li>
               </ul>
             </div>
