--- a/views/auction-disabled.hbs
+++ b/views/auction-disabled.hbs
@@ -1,10 +1,10 @@
 <div id="wrap">
   <div class="container content">
     <h2 class="blue">Donate an Auction Item</h2>
-    <p>Our auction is complete for our 2015 event!
-    Please contact <a href="mailto:Kim.Gregory@ozanam.org">Kim Gregory</a> at 816-508-3606 if you have questions or need any assistance.</p>
+    <p>Our auction is complete for our 2016 event!
+    Please contact <a href="mailto:shelli.veatch@ozanam.org">Shelli Veatch [shelli.veatch@ozanam.org]</a> at 816-508-3606 if you have questions or need any assistance.</p>
     <p>Thank you!</p>
 
-    <p><a href="http://assets.ozanamgala.org/2015-program.pdf" target="_blank" class="btn btn-large btn-primary">Get the 2015 Auction Program!</a></p>
+    <p><a href="http://assets.ozanamgala.org/2016-program.pdf" target="_blank" class="btn btn-large btn-primary">Get the 2016 Auction Program!</a></p>
   </div>
 </div>
