--- a/views/register-disabled.hbs
+++ b/views/register-disabled.hbs
@@ -3,7 +3,7 @@
     <h2 class="blue">Registration</h2>
     <p>
     Online registration is now closed. If you have already registered, then simply check in upon your arrival. You will receive a program and bid number at that time.
-    Please contact <a href="mailto:Kim.Gregory@ozanam.org">Kim Gregory</a> at 816-508-3606 if you have questions or need any assistance.</p>
+    Please contact <a href="mailto:shelli.veatch@ozanam.org">Shelli Veatch [shelli.veatch@ozanam.org]</a> at 816-508-3606 if you have questions or need any assistance.</p>
     <p class="lead">Thank you!</p>
   </div>
 </div>
