--- a/views/register.hbs
+++ b/views/register.hbs
@@ -102,7 +102,7 @@
         <div class="form-group">
           <label for="myoTaxCreditInfo"><input type="checkbox" id="myoTaxCreditInfo" name="myoTaxCreditInfo" value="true"/> *I'm interested in Missouri Youth Opportunity Tax Credits forms.</label>
         </div>
-        <p class="well well-sm small">*Donations eligible for Youth Opportunity (YOP) Tax Credits must be received by June 30, 2015. Please indicate your interest to us so we can provide you with a one-page form to complete in order to claim the credits. They are available on a first-come, first-served basis. <a href="http://ded.mo.gov/BCS%20Programs/BCSProgramDetails.aspx?BCSProgramID=85">Download our informational insert</a> or visit the Missouri government’s website for more details.</p>
+        <p class="well well-sm small">*Donations eligible for Youth Opportunity (YOP) Tax Credits must be received by June 30, 2016. Please indicate your interest to us so we can provide you with a one-page form to complete in order to claim the credits. They are available on a first-come, first-served basis. <a href="http://assets.ozanamgala.org/2016-yop-ozanam.pdf">Download our informational insert</a> or visit the Missouri government’s website for more details.</p>
         <div class="form-group">
           <label for="boardMember">Board / Committee Member</label>
           <input type="text" name="boardMember" id="boardMember" class="form-control"/>
