--- a/views/sponsor.hbs
+++ b/views/sponsor.hbs
@@ -89,7 +89,7 @@
         </div>
       </div>
 
-      <p><em><small>*Donations eligible for Youth Opportunity (YOP) Tax Credits must be received by June 30, 2015. Please indicate your interest to us so we can provide you with a one-page form to complete in order to claim the credits. They are available on a first-come, first-served basis. <a href="http://ded.mo.gov/BCS%20Programs/BCSProgramDetails.aspx?BCSProgramID=85">Download our informational insert</a> or visit the Missouri government’s website for more details.</small></em></p>
+      <p><em><small>*Donations eligible for Youth Opportunity (YOP) Tax Credits must be received by June 30, 2016. Please indicate your interest to us so we can provide you with a one-page form to complete in order to claim the credits. They are available on a first-come, first-served basis. <a href="http://assets.ozanamgala.org/2016-yop-ozanam.pdf" target="_blank">Download our informational insert</a> or visit the Missouri government’s website for more details.</small></em></p>
     </div>
   </div>
 </div>
