--- a/views/manage/auctions.hbs
+++ b/views/manage/auctions.hbs
@@ -1,7 +1,8 @@
 <h1>Auction Items</h1>
 <p><button id="export" type="button" class="btn btn-large btn-info">Export to Excel</button></p>
 <p><label for="year">Registration Year</label> <select id="year" style="width: auto;">
-  <option value="2015" selected>2015</option>
+  <option value="2016" selected>2016</option>
+  <option value="2015">2015</option>
   <option value="2014">2014</option>
   <option value="2013">2013</option>
 </select>
