--- a/views/layouts/public.hbs
+++ b/views/layouts/public.hbs
@@ -8,7 +8,7 @@
     <meta name="author" content="{{meta.author}}">
     <meta name="google-site-verification" content="VC1rajiWNjCWdG8gn2qCvaeEbI76W7y1qoVldrJwIb8" />
 
-    <title>{{title}}{{#if titlesuffix}} - 2015 Ozanam Hollywood Holiday Gala{{/if}}</title>
+    <title>{{title}}{{#if titlesuffix}} - Ozanam Hollywood Holiday Gala{{/if}}</title>
 
     <link href='//fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700' rel='stylesheet' type='text/css'>
     <!-- Le styles -->
