--- a/views/confirm.hbs
+++ b/views/confirm.hbs
@@ -119,17 +119,19 @@
           </div>
         </div>
         <div class="clearfix"></div>
-        <label>How would you like to pay?</label>
+        <p><label>How would you like to pay?</label></p>
         <div class="form-inline">
           <div class="checkbox">
-            <label><input type="radio" id="paymentOptionPayPal" name="paymentOption" value="paypal" {{#if nopaypal}} disabled{{else}} checked{{/if}} /><img src="/img/paypal.gif" border="0" alt="PayPal"/>.</label>{{#if nopaypal}}<small>Your total exceeds $10,000 PayPal limit.</small>{{/if}}
+            <!-- <label><input type="radio" id="paymentOptionPayPal" name="paymentOption" value="paypal" {{#if nopaypal}} disabled{{else}} checked{{/if}} /><img src="/img/paypal.gif" border="0" alt="PayPal"/>.</label>{{#if nopaypal}}<small>Your total exceeds $10,000 PayPal limit.</small>{{/if}} -->
+            <label><input type="radio" id="paymentOptionPayPal" name="paymentOption" value="paypal" disabled/><img src="/img/paypal.gif" border="0" alt="PayPal"/></label>   <span class="text-muted">Under maintenance.</span>
           </div>
           <br/>
           <div class="checkbox">
-            <label><input type="radio" id="paymentOptionCheck" name="paymentOption" value="check"  {{#if nopaypal}} checked{{/if}} /> Check by Mail</label>
+            <!-- <label><input type="radio" id="paymentOptionCheck" name="paymentOption" value="check"  {{#if nopaypal}} checked{{/if}} /> Check by Mail</label> -->
+            <label><input type="radio" id="paymentOptionCheck" name="paymentOption" value="check" checked /> Check by Mail</label>
           </div>
         </div>
-        <p><button type="submit" class="btn btn-large btn-primary">Continue</button></p>
+        <p><br/><button type="submit" class="btn btn-large btn-primary">Continue</button></p>
         {{#if problem}}
         <div class="alert alert-danger">
           There was a problem processing your payment. You can try again, or you can choose to send us a check by mail. Thank you for your patience.
