Re-enabling paypal

--- a/less/index.less
+++ b/less/index.less
@@ -1,5 +1,6 @@
 // Core variables and mixins
-@import "./variables.less";
+@import "../public/bower_components/bootstrap/less/variables.less";
+@import "./variables.less"; //overrides
 @import "../public/bower_components/bootstrap/less/mixins.less";
 
 // Reset and dependencies
