--- a/views/confirm.hbs
+++ b/views/confirm.hbs
@@ -122,13 +122,11 @@
         <p><label>How would you like to pay?</label></p>
         <div class="form-inline">
           <div class="checkbox">
-            <!-- <label><input type="radio" id="paymentOptionPayPal" name="paymentOption" value="paypal" {{#if nopaypal}} disabled{{else}} checked{{/if}} /><img src="/img/paypal.gif" border="0" alt="PayPal"/>.</label>{{#if nopaypal}}<small>Your total exceeds $10,000 PayPal limit.</small>{{/if}} -->
-            <label><input type="radio" id="paymentOptionPayPal" name="paymentOption" value="paypal" disabled/><img src="/img/paypal.gif" border="0" alt="PayPal"/></label>   <span class="text-muted">Under maintenance.</span>
+            <label><input type="radio" id="paymentOptionPayPal" name="paymentOption" value="paypal" {{#if nopaypal}} disabled{{else}} checked{{/if}} /><img src="/img/paypal.gif" border="0" alt="PayPal"/></label> {{#if nopaypal}}<small>Your total exceeds $10,000 PayPal limit.</small>{{/if}}
           </div>
           <br/>
           <div class="checkbox">
-            <!-- <label><input type="radio" id="paymentOptionCheck" name="paymentOption" value="check"  {{#if nopaypal}} checked{{/if}} /> Check by Mail</label> -->
-            <label><input type="radio" id="paymentOptionCheck" name="paymentOption" value="check" checked /> Check by Mail</label>
+            <label><input type="radio" id="paymentOptionCheck" name="paymentOption" value="check"  {{#if nopaypal}} checked{{/if}} /> Check by Mail</label>
           </div>
         </div>
         <p><br/><button type="submit" class="btn btn-large btn-primary">Continue</button></p>
